example_Challenges/Jenkins_Nightmare/challenge/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: x01-jenkins-nightmare
  labels:
    app: x01-jenkins-nightmare
    challenge: x01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: x01-jenkins-nightmare
  template:
    metadata:
      labels:
        app: x01-jenkins-nightmare
        challenge: x01
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: challenge
          image: x01-jenkins-nightmare:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 2Gi
