example_Challenges/Jenkins_Nightmare/challenge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x01-jenkins-nightmare
  labels:
    app: x01-jenkins-nightmare
    challenge: x01
spec:
  type: ClusterIP
  selector:
    app: x01-jenkins-nightmare
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
